--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 
 #greetings{
-    /*background-color: red;*/
+    background-color: red;
     text-align: justify;
+    height: 100%;
+    width: 100%;
+}
+#about{
+    height: 100%;
+    width: 100%;
 }
