--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 #left{
     background-color: #220066;
     text-align: justify;
-    height: 100%;
+    height: 90%;
     width: 48%;
     padding: 10px;
     padding-top: 20px;
@@ -14,7 +14,7 @@ body{
 }
 #right{
     background-color: #003311;
-    height: 100%;
+    height: 90%;
     width: 48%;
     padding: 10px;
     padding-top: 20px;
@@ -38,19 +38,25 @@ body{
     padding-top: 10px;
     padding-bottom: 10px;
 }
-/*<span style="cursor:pointer">pointer</span><br>*/
+a{
+    border-width: 2px;
+    border-color: aliceblue;
+    border-radius: 2px;
+}
 a:link{
     text-decoration: none;
     color: #33cc33;
+   
 }
 a:visited{
     color: #33cc33;
 }
 a:active{
-    color: black;
+    color: red;
 }
 a:hover{
     cursor: pointer;
+    font-size: 125%;
 }
 #buttons{
     list-style-type: none;
@@ -63,17 +69,3 @@ a:hover{
     border-style: groove;
     padding-right: 20px;
 }
-li a{
-    display: block;
-    float: left;
-    padding-left: 260px;
-    /*padding-top: 20px;
-    padding-bottom: 20px;*/
-}
-/*li a {
-    display: block;
-    color: blue;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }*/
