--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
+body{
+    color: aliceblue;
+}
 header{
-    background-color: aliceblue;
-    height: 100px;
+    height: 10%;
+}
+.left_nav_links{
+    text-decoration: none;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: medium;
 }
 nav{
     float: left;
-    width:30%;
-    background-color: blue;
+    width:20%;
+    height: 80%;
+    background-color: yellowgreen;
 }
 nav ul li{
     list-style-type: none;
@@ -18,6 +26,34 @@ nav ul li{
 #buttons{
     padding: 20px;
 }
-/* button{
-
-} */
+button{
+    cursor: pointer;
+    border: 1px solid #555;
+    text-align: center;
+    padding: 5px;
+    margin-left: 8px; 
+}
+#right_div{
+    float:inherit;
+    padding-left: 20px;
+    width: 75%;
+    height: 80%;
+    margin-left: 20%;
+}
+footer{
+    background-color: rgba(169, 169, 169, 0.505);
+    width: 100%;
+    height: 10%;
+}
+.light{
+    background-color: aliceblue;
+    color: black;
+}
+#change {
+    cursor: pointer;
+    border: 1px solid #555;
+    border-radius: 5px;
+    text-align: center;
+    padding: 5px;
+    margin-left: 8px;
+}
