--- a/style.css
+++ b/style.css
@@ -1,19 +1,25 @@
 body{
     color: aliceblue;
+    margin: 0px;
 }
 header{
     height: 10%;
+    background-color: #000000;
+    text-align: right;
+    align-items: center;
 }
 .left_nav_links{
     text-decoration: none;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: medium;
+    color: aliceblue;
 }
 nav{
     float: left;
-    width:20%;
-    height: 80%;
-    background-color: yellowgreen;
+    width:15%;
+    height: 70%;
+    background-image: linear-gradient(to bottom, #222222, #006FC6);
+    padding-top: 5%;
 }
 nav ul li{
     list-style-type: none;
@@ -35,10 +41,10 @@ button{
 }
 #right_div{
     float:inherit;
-    padding-left: 20px;
+    padding-left: 15px;
     width: 75%;
     height: 80%;
-    margin-left: 20%;
+    margin-left: 15%;
 }
 footer{
     background-color: rgba(169, 169, 169, 0.505);
