--- a/style.css
+++ b/style.css
@@ -14,20 +14,20 @@ header{
     font-size: medium;
     color: aliceblue;
 }
-nav{
+#nav{
     float: left;
     width:15%;
-    height: 70%;
+    height: 432px;
     background-image: linear-gradient(to bottom, #222222, #006FC6);
     padding-top: 5%;
 }
-nav ul li{
+#nav ul li{
     list-style-type: none;
     padding: 10px;
 }
 #pdf{
     width: 100%;
-    height: 90%;
+    height: 100%;
 }
 #buttons{
     padding: 20px;
@@ -43,13 +43,14 @@ button{
     float:inherit;
     padding-left: 15px;
     width: 75%;
-    height: 80%;
+    height: 74%;
     margin-left: 15%;
 }
 footer{
     background-color: rgba(169, 169, 169, 0.505);
     width: 100%;
-    height: 10%;
+    height: fit-content;
+    padding-left: 20px;
 }
 .light{
     background-color: aliceblue;
@@ -62,4 +63,7 @@ footer{
     text-align: center;
     padding: 5px;
     margin-left: 8px;
+}
+td{
+    padding: 5px;
 }
